--- a/app/newindex.html
+++ b/app/newindex.html
@@ -45,8 +45,82 @@
       <div id="about"></div>
     </main>
     <footer>
-      <div id="contact"></div>
-      <p>Developed with <span>❤️</span></p>
+      <div id="contact">
+        <div class="left">
+          <h1>Bi' şeyler söylemek ister misin?</h1>
+          <a href="mailto:berkayoruc0@gmail.com" target="_blank"
+            >berkayoruc0@gmail.com</a
+          >
+          <div class="social-media-icons">
+            <div class="row">
+              <a
+                style="background-color: white; color: teal"
+                href="https://play.google.com/store/apps/dev?id=6243426129705745004"
+                target="_blank"
+              >
+                <i class="fab fa-google-play"></i>
+              </a>
+              <a
+                style="background-color: #0a66c2"
+                href="https://www.linkedin.com/in/berkayoruc/"
+                target="_blank"
+              >
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a
+                style="background-color: #0d1117"
+                href="https://github.com/berkayoruc"
+                target="_blank"
+              >
+                <i class="fab fa-github"></i>
+              </a>
+              <a
+                style="color: rgba(25, 25, 25, 1); background-color: white"
+                href="https://medium.com/@berkayoruc"
+                target="_blank"
+              >
+                <i class="fab fa-medium"></i
+              ></a>
+            </div>
+            <div class="row">
+              <a
+                style="color: #55acee; background-color: white"
+                href="https://twitter.com/orucberkay"
+                target="_blank"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a
+                style="
+                  background: radial-gradient(
+                    circle at 30% 107%,
+                    #fdf497 0%,
+                    #fdf497 5%,
+                    #fd5949 45%,
+                    #d6249f 60%,
+                    #285aeb 90%
+                  );
+                "
+                href="https://www.instagram.com/hexaapps/"
+                target="_blank"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a
+                style="background-color: #ff4e45"
+                href="https://www.youtube.com/c/berkayoruc"
+                target="_blank"
+              >
+                <i class="fab fa-youtube"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+          <img src="./assets/images/img/pp.png" alt="" srcset="" />
+        </div>
+      </div>
+      <p>Developed with 🧠</p>
     </footer>
   </body>
 </html>
