--- a/app/newindex.html
+++ b/app/newindex.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/header.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
     <link rel="stylesheet" href="./assets/css/footer.css" />
-    <!-- <script defer src="./assets/js/script.js"></script> -->
+    <script defer src="./assets/js/newscript.js"></script>
     <title>Berkay Oruç</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -31,15 +31,18 @@
     </script>
   </head>
   <body>
+    <div id="modal-menu" class="hide"></div>
+    <div id="modal-background" class="hide"></div>
     <header>
       <div class="header-title">
         <h1>Berkay Oruç</h1>
       </div>
       <div class="header-menu">
-        <button><i class="fa fa-bars"></i></button>
+        <button id="btn-menu"><i class="fa fa-bars"></i></button>
       </div>
     </header>
     <main>
+      <div class="card"></div>
       <div id="projects"></div>
       <div id="articles"></div>
       <div id="about"></div>
