--- a/app/newindex.html
+++ b/app/newindex.html
@@ -42,7 +42,14 @@
       </div>
     </header>
     <main>
-      <div class="card"></div>
+      <div class="card">
+        <img src="./assets/images/img/pp.png" alt="profile picture" srcset="" />
+        <h3>Merhaba, ben Berkay</h3>
+        <h1>
+          Web ve mobil uygulamalar geliştirerek insanların hayatlarını
+          kolaylaştırmaya çalışıyorum.
+        </h1>
+      </div>
       <div id="projects"></div>
       <div id="articles"></div>
       <div id="about"></div>
