--- a/app/design3/index.html
+++ b/app/design3/index.html
@@ -54,41 +54,43 @@
           <b>mobil</b> uygulamalar geliştiriyorum.
         </p>
         <h3></h3>
-        <div id="projects"></div>
+        <div id="projects">
+          <h3>Projects</h3>
+        </div>
         <div id="articles"></div>
         <div id="about"></div>
       </section>
-      <footer>
-        <div class="social-media-icons">
-          <a
-            href="https://play.google.com/store/apps/dev?id=6243426129705745004"
-            target="_blank"
-          >
-            <i class="fab fa-google-play"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/berkayoruc/" target="_blank">
-            <i class="fab fa-linkedin-in"></i>
-          </a>
-          <a href="https://github.com/berkayoruc" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="https://medium.com/@berkayoruc" target="_blank">
-            <i class="fab fa-medium"></i
-          ></a>
-          <a href="https://twitter.com/orucberkay" target="_blank">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://www.instagram.com/hexaapps/" target="_blank">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="https://www.youtube.com/c/berkayoruc" target="_blank">
-            <i class="fab fa-youtube"></i>
-          </a>
-        </div>
-        <div class="copyright">
-          <h3>Berkay Oruç 2022</h3>
-        </div>
-      </footer>
     </main>
+    <footer>
+      <div class="social-media-icons">
+        <a
+          href="https://play.google.com/store/apps/dev?id=6243426129705745004"
+          target="_blank"
+        >
+          <i class="fab fa-google-play"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/berkayoruc/" target="_blank">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/berkayoruc" target="_blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://medium.com/@berkayoruc" target="_blank">
+          <i class="fab fa-medium"></i
+        ></a>
+        <a href="https://twitter.com/orucberkay" target="_blank">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://www.instagram.com/hexaapps/" target="_blank">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://www.youtube.com/c/berkayoruc" target="_blank">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+      <div class="copyright">
+        <h3>Berkay Oruç 2022</h3>
+      </div>
+    </footer>
   </body>
 </html>
