--- a/app/fmt/index.html
+++ b/app/fmt/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>FMT</h1>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Find My Thing</title>
+		<link rel="stylesheet" href="fmt.css" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+	</head>
+	<body>
+		<div class="section">
+			<div class="header">
+				<a href="/fmt" class="header-first">
+					<div class="header-logo">
+						<img src="icon.png" loading="lazy" width="32px" height="32px" />
+						<div class="top-logo-white">Find My Thing</div>
+					</div>
+				</a>
+				<a
+					href="https://apps.apple.com/us/app/find-my-thing/id1636212988"
+					target="_blank"
+					class="download-button"
+					>Download</a
+				>
+			</div>
+			<div class="landing-content">
+				<div class="screenshot">
+					<img src="ss.png" loading="lazy" />
+				</div>
+				<div class="main-content">
+					<h1>A new way to save things</h1>
+					<p>
+						Text recognition, location save, open with Apple Maps, and more.
+					</p>
+					<a
+						href="https://apps.apple.com/us/app/find-my-thing/id1636212988"
+						target="_blank"
+					>
+						<img src="appstore/US/white.svg" loading="lazy" />
+					</a>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
